# OpenRVS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Shims_Vision_Project/: CMakeLists.txt  Shims_Vision_Project  Shims_Vision_Project.cpp  Shims_Vision_Project.h
Shims_Vision_Project/test_apple/: CMakeLists.txt
Shims_Vision_Project/test_win/: CMakeLists.txt  test_win.cpp
include/: svp.h
src/: CMakeLists.txt  svp.cpp
test/apple/: CMakeLists.txt  main.cpp
test/apple/include/: test.h
test/win/: CMakeLists.txt  main.cpp
